fix code frame overflow

--- a/arkada.css
+++ b/arkada.css
@@ -710,9 +710,9 @@ td.body {
 code {
   box-shadow: var(--box-shadow-inset);
   display: block;
-  width: 95%;
+  width: 70vw;
   position: relative;
-  margin: auto;
+  margin: 1vw;
   padding: 1em;
   font-family: Roboto-mono;
   white-space: nowrap;
@@ -754,6 +754,7 @@ table#newthreadtext.layout tbody tr td:nth-child(3) {
   background: var(--background1) !important;
   border: none !important;
   box-shadow: var(--box-shadow-inset);
+  font-size: 1rem !important;
 }
 #reply_box {
   width: 70%;
